fixed and migrated auth system to Supabase
